<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.security.SecurityConfirmActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/layout_checkbox"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_checkbox"
                android:layout_width="85dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/isrecheck">
            </TextView>
            <CheckBox
                android:id="@+id/checkbox_isrecheck"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:text=""
                android:checked="false">

            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_xuan1"
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xuan_user" />
            <RadioButton
                android:id="@+id/radio_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/xuan_edit" />
            <Button
                android:id="@+id/btn_check"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:background="@drawable/corners_blue_bg"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>