<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangel_item"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/w_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                tools:text="@string/w_code" />

            <Button
                android:id="@+id/tag_1"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/btn_status_issued"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:text="@string/unhandle"
                android:textColor="@color/status_issued"
                android:textSize="12sp"
                android:visibility="visible" />
            <Button
                android:id="@+id/tag_2"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:background="@drawable/btn_status_close"
                android:text="@string/handled"
                android:textColor="@color/status_closed"
                android:textSize="12sp" />
            <Button
                android:id="@+id/tag_3"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:visibility="gone"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:background="@drawable/btn_status_close"
                android:text="@string/closed"
                android:textColor="@color/status_closed"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_reporter"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/w_reporter"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_reporter_mobile"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/w_reporter_mobile"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_report_time"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/w_report_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_source"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/w_source"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_repairer"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/w_repairer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/w_repairer_time"
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/w_repairer_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/w_repair_addr"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/w_repair_addr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@android:color/background_dark"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>