<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangel_item"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:singleLine="true"
                android:text=""
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                tools:text="@string/security_name" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/username"
                    android:textAlignment="textEnd"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/username" />
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textEnd"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/userno"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/userno" />
                <TextView
                    android:id="@+id/userno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1.2"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textEnd"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/mobile"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/mobile" />
                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/userstatus"
                    android:textAlignment="textEnd"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/userstatus" />
                <TextView
                    android:id="@+id/userstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textAlignment="textEnd"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/address"
                    android:textColor="@color/font_gray"
                    android:textSize="14sp"
                    tools:text="@string/address" />
                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:text=""
                    android:textColor="@android:color/background_dark"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_miss"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:visibility="visible"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:background="@drawable/btn_status_close"
                android:text="@string/miss"
                android:layout_marginRight="20dp"
                android:textColor="@color/status_closed"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_reject"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:visibility="visible"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_status_reject"
                android:text="@string/reject"
                android:textColor="@color/status_reject"
                android:textSize="12sp" />
            <Button
                android:id="@+id/btn_record"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:background="@drawable/btn_status_record"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:text="@string/securityrecord"
                android:textColor="@color/status_record"
                android:textSize="12sp"
                android:visibility="gone" />
            <Button
                android:id="@+id/btn_enter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:visibility="visible"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                app:backgroundTint="@null"
                android:background="@drawable/btn_status_issued"
                android:text="@string/enter"
                android:textColor="@color/status_issued"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
