<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg1"
    tools:context=".views.security.SecuirtyDangerActivity">
    <ScrollView
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/scrollview_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tip"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/rectangel_item"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip">
                </TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tip1">
                </TextView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/dynamic"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            </LinearLayout>

            <LinearLayout
                android:id="@+id/other"
                android:background="@drawable/rectangel_item"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:id="@+id/divider"
                        android:layout_width="2dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/blue" />

                    <TextView
                        android:id="@+id/group_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="其他燃气隐患"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                    <EditText
                        android:id="@+id/textarea_unneed"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/rectangel_item"
                        android:textSize="14dp"
                        android:hint="请输入"
                        android:lines="3"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/needknow"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/rectangel_item"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/needknow">
                </TextView>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:gravity="center"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_goback"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/solid_bg"
                    android:textColor="@color/black"
                    android:text="返回" />
                <Button
                    android:id="@+id/btn_check"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="@color/white"
                    android:background="@drawable/corners_blue_bg"
                    android:text="已检查" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>